@@ -1,9 +1,14 @@
-2012-01-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+2012-01-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* * src/algebra/sf.spad.pamphlet, src/interp/vmlisp.lisp:
+	Replace a few elementary functions by Spad versions.
+
+2012-01-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/algebra/sf.spad.pamphlet: Add few more elliptic
 	functions.
 
-2012-01-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+2012-01-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/interp/bootlex.lisp, src/interp/scan.boot:
 	Make underscores significant in Spad/interpreter names
